--- a/server/404.html
+++ b/server/404.html
@@ -10,6 +10,6 @@
 <body style="text-align: center" topmargin="100">
 <h1>404<h1>
         <h2>Page Not Found!</h2>
-        <a href="/">Go Back!</a>
+        <a href="/">Main page</a>
 </body>
 </html>
